--- a/ilkproject/src/assets/SCSS/_footer.scss
+++ b/ilkproject/src/assets/SCSS/_footer.scss
@@ -81,7 +81,7 @@ footer {
             width: 400px;
             flex-direction: column;
             gap: 20px;
-            padding: 30px;
+            // padding: 30px;
 
             a {
                 color: #3b5d50;
@@ -221,9 +221,14 @@ footer {
         width: 100%;
 
     }
+
     header .container .navBar nav ul li a::after {
         display: none;
         visibility: hidden;
+    }
+
+    .homePage .container {
+        flex-wrap: wrap;
     }
 }
 
@@ -238,12 +243,7 @@ footer {
     ul {
         flex-direction: column;
     }
-}
-
-.homePage .container {
-    flex-wrap: wrap;
-}
-
+    
 .homePage .container .modernInterior {
     width: auto;
     letter-spacing: 1.5px;
@@ -294,6 +294,10 @@ footer .main .furni {
     width: 500px;
     height: 420px;
 }
+
+}
+
+
 
 
 
