--- a/ilkproject/src/assets/SCSS/_footer.scss
+++ b/ilkproject/src/assets/SCSS/_footer.scss
@@ -81,7 +81,7 @@ footer {
             width: 400px;
             flex-direction: column;
             gap: 20px;
-            // padding: 30px;
+            padding: 30px;
 
             a {
                 color: #3b5d50;
